2002-01-21  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java:  Also define 'unescaped-data'.

	* acinclude.m4:  New check-in.

2002-01-19  Per Bothner  <per@bothner.com>

	* kawa/lang/CompileFile.java (apply2):  Don't catch and re-throw.

2002-01-13  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme):  Define response-header.
	* kawa/Shell.java (format):  New static table.
	(setDefaultFormat, getOutputConsumer):  New static methods.
	(run):  New overload taking an output Consumer instead of an OutPort.
	* kawa/repl.java (processArgs):  New method.
	New code to handle "\\" and "--output-format" or "--format".
	(main):  Use processArgs.
	* kawa/standard/load.java (loadSource):  Use getOutputConsumer.
	Wrap body in a beginDocument/endDocument pair.

2002-01-07  Per Bothner  <per@bothner.com>

	* kawa/lang/CompileFile.java (compile_to_files): Do mangleNameIfNeeded.

2001-12-24  James P. White  <jim@pagesmiths.com>

	* kawa/repl.java (main):  Need to increment iArg on -w.

2001-12-24  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite_pair):  Don't crash if we
	get a Procedure with a null name.

2001-11-27  Per Bothner  <per@bothner.com>

	* Makefile.am (JAVADOC_PACKAGES):  Add new packages.
	Add coment docuemnting javadoc procedure.

	* Makefile.am (dist-kawa-@VERSION@.jar):  Add configure options.
	(kawa-@VERSION@-src.zip, kawa-src.zip):  New rules.

2001-11-26  Per Bothner  <per@bothner.com>

	* build.xml (build.dir):  Change to basedir.
	(echo):  Also output dist.kawa.jar.  Avoids tabs.

2001-11-24  Per Bothner  <per@bothner.com>

	* build.xml, build.properties:  Update from Jim White.

	* Makefile.am:  Add more directories (conditionally) to JAR_DEPS.

	* kawa/standard/convert.java:  Moved to gnu.kawa.functions.Convert.
	* kawa/standard/Makefile.am:  Update accordingly
	* kawa/standard/Scheme.java (initScheme):  Likewise.

	* kawa/standard/Scheme.java (getTypeFor):  Map "java.lang.String"