@@ -1,3 +1,8 @@
+2002-01-23  Per Bothner  <per@bothner.com>
+
+	* kawa/lang/Translator.java (makeBody):  New method.
+	(rewrite_body, finishModule):  Use makeBody.
+
 2002-01-21  Per Bothner  <per@bothner.com>
 
 	* kawa/standard/Scheme.java:  Also define 'unescaped-data'.
